<resources>
    <string name="app_name">GitBook</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="company">Company</string>
    <string name="share">Share</string>
    <string name="repositories">repositories</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="share_profile_url">Share Profile URL</string>
    <string name="share_url_message">Find %1$s on GitHub by visiting https://github.com/%2$s</string>
    <string name="profile_banner">Profile Banner</string>
    <string name="location">Location</string>
    <string name="tab_following">Following</string>
    <string name="tab_followers">Followers</string>
    <string name="search">Search</string>
    <string name="search_hint">Search User…</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite">Favorite</string>
    <string name="cd_fab_favorite">Add user to favorite</string>
    <string name="favorite_added">Added to favorite list</string>
    <string name="favorite_removed">Removed from favorite list</string>
    <string name="empty_favorite">No Favorite Users</string>
</resources>