<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <Button
                            android:id="@+id/btn_back"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/ic_back"
                            app:backgroundTint="@color/white"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <ImageView
                            android:id="@+id/iv_photo_bg"
                            android:layout_width="match_parent"
                            android:layout_height="335dp"
                            android:adjustViewBounds="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            android:contentDescription="@string/profile_banner" />

                        <ImageView
                            android:id="@+id/iv_photo"
                            android:layout_width="125dp"
                            android:layout_height="125dp"
                            app:layout_constraintBottom_toBottomOf="@+id/iv_photo_bg"
                            app:layout_constraintEnd_toEndOf="@+id/iv_photo_bg"
                            app:layout_constraintStart_toStartOf="@+id/iv_photo_bg"
                            app:layout_constraintTop_toTopOf="@+id/iv_photo_bg"
                            app:layout_constraintVertical_bias="0.40"
                            tools:src="@tools:sample/avatars"
                            android:contentDescription="@string/profile_photo" />

                        <TextView
                            android:id="@+id/tv_full_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="@+id/iv_photo"
                            app:layout_constraintStart_toStartOf="@+id/iv_photo"
                            app:layout_constraintTop_toBottomOf="@+id/iv_photo"
                            tools:text="@tools:sample/full_names" />

                        <TextView
                            style="@style/Text.Subtitle.Username"
                            android:id="@+id/tv_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            app:layout_constraintEnd_toEndOf="@id/tv_full_name"
                            app:layout_constraintStart_toStartOf="@id/tv_full_name"
                            app:layout_constraintTop_toBottomOf="@id/tv_full_name"
                            tools:text="@tools:sample/first_names" />

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            app:layout_constraintTop_toBottomOf="@id/tv_username"
                            app:layout_constraintStart_toStartOf="@id/tv_username"
                            app:layout_constraintEnd_toEndOf="@id/tv_username">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                tools:ignore="UselessParent">
                                <ImageView
                                    android:layout_width="14dp"
                                    android:layout_height="14dp"
                                    android:contentDescription="@string/company"
                                    android:src="@drawable/ic_bag_lighter" />
                                <TextView
                                    android:id="@+id/tv_company"
                                    style="@style/Text.Description"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:maxWidth="100dp"
                                    android:layout_marginStart="4dp"
                                    android:ellipsize="end"/>
                                <ImageView
                                    android:layout_width="14dp"
                                    android:layout_height="14dp"
                                    android:layout_marginStart="8dp"
                                    android:contentDescription="@string/location"
                                    android:src="@drawable/ic_place_lighter" />
                                <TextView
                                    android:id="@+id/tv_location"
                                    style="@style/Text.Description"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:maxWidth="100dp"
                                    android:layout_marginStart="4dp"
                                    android:ellipsize="end"  />
                            </TableRow>
                        </TableLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:id="@+id/btn_share"
                        style="@style/Text.Button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_bg_green_round_button"
                        android:text="@string/share"
                        app:layout_constraintTop_toBottomOf="@id/cl_profile"
                        app:layout_constraintBottom_toBottomOf="@id/cl_profile"
                        app:layout_constraintStart_toStartOf="@id/cl_profile"
                        app:layout_constraintEnd_toEndOf="@id/cl_profile"
                        android:textStyle="bold" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:id="@+id/tv_repository"
                            style="@style/Text.Count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"  />
                        <TextView
                            android:id="@+id/tv_followers"
                            style="@style/Text.Count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"  />
                        <TextView
                            android:id="@+id/tv_following"
                            style="@style/Text.Count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"  />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:text="@string/repositories" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:text="@string/followers" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:text="@string/following" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tabs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:tabIndicatorColor="@color/grey"
                            app:tabTextColor="@color/grey"
                            android:layout_span="3"/>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/view_pager"
                            android:layout_width="match_parent"
                            android:layout_height="500dp"
                            android:layout_span="3"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:foregroundGravity="bottom"
            android:visibility="gone"
            app:tint="@color/white"
            app:backgroundTint="@color/grey"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_favorite_border"
            android:contentDescription="@string/cd_fab_favorite" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:foregroundGravity="bottom"
            android:visibility="gone"
            app:tint="@color/white"
            app:backgroundTint="@color/grey"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_favorite"
            android:contentDescription="@string/cd_fab_favorite" />
    </LinearLayout>
</RelativeLayout>